Highlight text for conclusions

--- a/code_and_figures_git.Rmd
+++ b/code_and_figures_git.Rmd
@@ -80,7 +80,7 @@ SI %>% filter(study_type !="no_quantification") %>% distinct(study, year, no)  %
 # -> 0.9047619
 ```
 
-<div style="background-color: #FFFF00">
+<div style="background-color: #bbe1e0">
 **84 articles** contain the words 'copepods” and “carotenoid”, “astaxanthin” or “redness” and among them, **76 (90%) quantified carotenoids** (in various units and methods). 
 </div>
 
@@ -105,12 +105,12 @@ SI %>% filter(genus != "mixed") %>%
   labs(y="Genus", x= "Number of reported observations")+theme_linedraw(base_size = 10)
 ```
 
+<div style="background-color: #bbe1e0">
 Carotenoids were observed in **161 species among 63 genus** (we removed case where genus are mixed together, noted as "mixed"). We can see that *Diaptomus* and *Calanus* species are the most studied. 
-
-
-
 <br/>
 In some articles, carotenoid pigmentation was just discussed in the text of the article but not quantified, so we classify the study type as "no_quantification" in the "study_type" column. In other cases, pigmentation was assessed visually for some tests but no numerical quantifications were performed. In those cases we put NAs in the "concentration" column. **For all next analyses, only studies that quantified carotenoids will be used:**
+</div>
+
 
 ```{r echo=T, results='hide'}
 SI <- SI %>% filter(study_type !="no_quantification")
@@ -121,8 +121,9 @@ SI %>% filter(is.na(concentration) == FALSE) %>% distinct(study, year, no, latit
 ```
 
 
-
+<div style="background-color: #bbe1e0">
 Carotenoids quantifications were reported in **134 locations globally**, which correspond to **262 measurements of pigments**  (combinations study/latitude/longitude/altitude/species/stages) <br/>
+</div>
 
 <br/>
 
@@ -132,8 +133,9 @@ Carotenoids quantifications were reported in **134 locations globally**, which c
 SI  %>% filter(is.na(concentration) == FALSE) %>% group_by(unit) %>% summarise(nb_of_studies_using_this_unit = n()) %>% arrange(-nb_of_studies_using_this_unit) %>% ungroup()
 ```
 
-
+<div style="background-color: #bbe1e0">
 Among the **262 quantifications**, the most common unit was **µg/mgDW**: 202 measurements, so only values in µg/mgDW will be kept for quantitative comparisons.
+</div>
 <br/>
 
 ### *Freshwater vs marine ecosystems*
@@ -201,9 +203,9 @@ ggdraw(pigment_dd) +  draw_plot(world_map, width =0.75, height =0.75,
 
 ```
 
-
+<div style="background-color: #bbe1e0">
 Freshwater species have an average carotenoid concentration of **2.77 ± 2.71 µg.mgDW-1 (n=62)** and marine species an average carotenoid concentration of **0.44 ± 1.06 µg.mgDW-1 (n=140)**. 
-
+</div>
 
 <br/>
 <br/>
@@ -264,8 +266,9 @@ wilcox.test(filter(ug, ecosystem =="marine")$concentration_log10, filter(ug, eco
 
 ```
 
+<div style="background-color: #bbe1e0">
 Freshwater and marine carotenoid concentrations are **significantly different** using a Wilcoxon rank sum test. We can then observe mean concentration differences between copepod genus:  
-
+</div>
 
 ```{r echo=FALSE, fig.align="center", fig.cap=c("Figure S1. Carotenoid concentration (µg/mgDW) in different freshwater and marine copepod genus. Color represent the number of studies that were used to compute the mean carotenoid content."), fig.height=11, fig.width=14}
 ug %>% filter(genus != "mixed") %>% 
@@ -283,8 +286,9 @@ ug %>% filter(genus != "mixed") %>%
 
 <br/>
 
+<div style="background-color: #bbe1e0">
 Plenty of copepod genus have the availability to synthesize astaxanthin but their propensity to do so seems mediated by the environment where they live. Note that then marine species accumulating the more pigments are *Tigriopus sp.* living in shallow temperate waters (ex: tidal pools of rocky shores) and *Calanus spp.* living in arctic and subarctic waters, submitted to strong seasonal climate variations.  
-
+</div>
 
 <br/>
 
@@ -332,8 +336,9 @@ nrow(asta_cantha) / 166 *100
 # -> canthaxanthin was found in only 9 studies (21 observations, 13% of cases), and almost everytime in "negligible amounts, traces or <5%"
 ```
 
-
+<div style="background-color: #bbe1e0">
 **Thirty studies** provide a detailed description of carotenoid pigments molecular forms for various species and developmental stages (166 measurements). In **96% (160 quantifications), astaxanthin was dominant** (or >50%), in ~5% (6 quantifications) of the cases, astaxanthin was in a minority or <50% of carotenoids. **Canthaxanthin was found in only 9 studies** (21 observations, 13% of cases), and almost every time in "negligible amounts, traces or <5%". 
+</div>
 
 <br/>
 
@@ -379,9 +384,9 @@ rbind(free_dom_est_min2, free_min_est_dom2) %>%
 ```
 
 
-
+<div style="background-color: #bbe1e0">
 **18 studies** provided detailed forms of carotenoids (38 observations). In **61%** of cases, **free astaxanthin is dominant**, and in **39%** of cases **esters are dominant**. Very detailed analyses (8 quantifications from 7 studies) show that on average, 53% of astaxanthin is in the free form, 27% of astaxanthin is in mono-esters and 20% is di-ester.
-
+</div>
 <br/>
 
 ### *Ontogenic development*
@@ -425,8 +430,9 @@ plot(model)
 
 ```
 
-
+<div style="background-color: #bbe1e0">
 There is a **significant relationship between carotenoids content and altitude of lakes, p-value < 0.001**. However, we see a lot of noise (R square = 0.16) that could be explain by variations of other abiotic variables (temperature, lake depth, water turbidity) and biotic variables (phytoplanktonic community, predators, disponibility of other UV protectants).
+</div>
 <br/>
 
 ### *Latitude*
@@ -450,9 +456,9 @@ ug  %>%
 ```
 
 
-
+<div style="background-color: #bbe1e0">
 **Carotenoids content shows no relationship with latitude, neither in freshwater nor in marine environments.** In fact, concentration variations within a study (or a species) are often more important than variations according to latitude. </br>
-
+</div>
 <br/>
 
 
@@ -464,9 +470,9 @@ ug  %>%
 SI %>% filter(is.na(seasonal_pic_season) == FALSE) %>% select(study, year, no, seasonal_pic_season) %>% group_by(seasonal_pic_season) %>% summarise(count = n()) %>% mutate(tot = sum(count), percent = count/tot*100) %>% select(-tot)
 ```
 
-
+<div style="background-color: #bbe1e0">
 On **37 time series**, astaxanthin content showed seasonal patterns with **maxima in winter (45%) or in spring (40%)** or in automn (3%). In 10% of the cases, no seasonal maxima were observed. 
-
+</div>
 
 <br/>
 
@@ -512,9 +518,9 @@ wilcox.test(concentration ~ predation, data = df_fish)
 df_fish %>% group_by(predation) %>% summarise(mean(concentration))
 ```
 
-
+<div style="background-color: #bbe1e0">
 We are **really close to the significance threshold (p-value = 0.05014)** for the Wilcocxon rank sum test to compare pigment content between lakes **with** (mean carotenoid concentration = **2.12 µg/mgDW, n=33**) and **without fish** (mean carotenoid concentration = **3.35 µg/mgDW, n = 22**). Altitude could play a role inside each category : high altitude lakes or ponds without fish can also be shallow and exposed to strong light radiations.
-
+</div>
 
 <br/>
 
@@ -524,8 +530,9 @@ wilcox.test(concentration ~ predation, data = df_fish)
 df_fish %>% group_by(predation) %>% summarise(mean(concentration))
 ```
 
+<div style="background-color: #bbe1e0">
 We are **really close to the significance threshold (p-value = 0.05014)** for the Wilcocxon rank sum test to compare pigment content between lakes **with** (mean carotenoid concentration = **2.12 µg/mgDW, n=33**) and **without fish** (mean carotenoid concentration = **3.35 µg/mgDW, n = 22**). Altitude could play a role inside each category : high altitude lakes or ponds without fish can also be shallow and exposed to strong light radiations.
-
+</div>
 
 <br/>
 
@@ -598,9 +605,9 @@ SIV %>% filter(str_detect(response_variable, "Survival") | str_detect(response_v
   summarise(n=n(), percent = n()/21)
 ```
 
-
+<div style="background-color: #bbe1e0">
 Out of **50 statistically tested** effects on one fitness variable, red pigmentation was **unfavorable for 8 (16%), neutral for 11 (22%), and favorable in 31 cases (62%)**. If we look in particular to survival and mortality curves, when copepods are in general submitted to an external stressor, we can see that carotenoid pigmentation is favorable in **71% of the cases**.
-
+</div>
 
 <br/>
 
