--- a/code_and_figures.Rmd
+++ b/code_and_figures.Rmd
@@ -24,6 +24,7 @@ knitr::opts_chunk$set(echo=TRUE, cache=FALSE, message = FALSE, warning = FALSE, 
 ```{r include=FALSE}
 library("tidyverse")
 library("DT")
+library("writexl")
 
 library("scales")
 library("cowplot")
@@ -72,23 +73,23 @@ datatable(SIV, rownames = FALSE, filter="top", options = list(pageLength = 5, sc
 <br/>
 <br/>
 
-# I. Red pigmentation in copepods 
+# I. Carotenoid pigmentation in copepods 
 
-## A. Redness: a shared and conserved functional trait in copepods 
+## A. A shared and conserved functional trait in copepods 
 
 ### *Studies*
 ```{r echo=T, results='hide'}
 # Counts of all studies 
 (SI %>% distinct(study, year, no) %>% nrow())
-#-> 84
+#-> 95
 
 # Counts of studies with quantification of carotenoids
-SI %>% filter(study_type !="no_quantification") %>% distinct(study, year, no)  %>% nrow()
-#-> 75
+SI %>% filter(str_detect(study_type, "no_quantification", negate = T)) %>% distinct(study, year, no)  %>% nrow()
+#-> 70
 
 # Ratio between both
-(SI %>% filter(study_type !="no_quantification") %>% distinct(study, year, no)  %>% nrow()) / (SI %>% distinct(study, year, no) %>% nrow())
-# -> 0.9047619
+(SI %>% filter(str_detect(study_type, "no_quantification", negate = T)) %>% distinct(study, year, no)  %>% nrow()) / (SI %>% distinct(study, year, no) %>% nrow())
+# -> 0.74
 ```
 
 <style>
@@ -96,7 +97,7 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
 
-**84 articles** contain the words 'copepods” and “carotenoid”, “astaxanthin” or “redness” and among them, **76 (90%) quantified carotenoids** (in various units and methods). 
+**95 articles** contain the words 'copepods” and “carotenoid”, “astaxanthin” or “redness”, and have observed blue or red copepods in marine or freshwater ecosystems. Among them, **70 studies (74%) quantified carotenoids** (in various units and methods). 
 
 </div>
 
@@ -107,11 +108,11 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 ```{r, echo=T, results='hide'}
 # Number of species
 SI %>% group_by(species) %>% summarise() %>% nrow()
-# -> 157
+# -> 171
 
 # Number of genus
 SI %>% filter(genus != "mixed") %>% group_by(genus) %>% summarise() %>% nrow()
-# -> 62
+# -> 65
 ```
 
 ```{r, fig.height=6, fig.width=5, fig.align="center", fig.cap=c("Counts of studies that observed carotenoid pigmentation in different copepod genus.")}
@@ -127,19 +128,29 @@ SI %>% filter(genus != "mixed") %>%
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
-Carotenoids were observed in **161 species among 63 genus** (we removed case where genus are mixed together, noted as "mixed"). We can see that *Diaptomus* and *Calanus* species are the most studied. 
+Carotenoids were observed in **171 species among 65 genus** (we removed case where genus are mixed together, noted as "mixed"). We can see that *Diaptomus* and *Calanus* species are the most studied. 
 </div>
 
-
 <br/>
-In some articles, carotenoid pigmentation was just discussed in the text of the article but not quantified, so we classify the study type as "no_quantification" in the "study_type" column. In other cases, pigmentation was assessed visually for some tests but no numerical quantifications were performed. In those cases we put NAs in the "concentration" column. **For all next analyses, only studies that quantified carotenoids will be used:**
+In some articles, carotenoid pigmentation was just discussed in the text of the article but not quantified, so we indicated "no_quantification" in the "study_type" column. **For following analyses, only studies that quantified carotenoids will be used:**
 
 ```{r echo=T, results='hide'}
-SI <- SI %>% filter(study_type !="no_quantification")
+SI_obs_and_quanti <- SI
+SI_obs_and_quanti %>% distinct(study, year, no, latitude, longitude) %>% nrow()
+# -> pigmentation (red or blue) was observed at 154 locations globally
+SI_obs_and_quanti %>% nrow()
+
+```
+
+
+```{r echo=T, results='hide'}
+# keep only studies with quantifications (no NA in the "concentration" column)
+SI <- SI %>% filter(str_detect(study_type, "no_quantification", negate = T))
+
+SI %>% nrow()
+# -> 286 measurements of pigments
 SI  %>% distinct(study, year, no, latitude, longitude) %>% nrow()
-# -> 133
-SI %>% filter(is.na(concentration) == FALSE) %>% distinct(study, year, no, latitude, longitude, altitude, species, stage) %>% nrow()
-# -> 262
+# -> pigmentation (red or blue) was quantified at 128 locations
 ```
 
 
@@ -147,7 +158,7 @@ SI %>% filter(is.na(concentration) == FALSE) %>% distinct(study, year, no, latit
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
-Carotenoids quantifications were reported in **134 locations globally**, which correspond to **262 measurements of pigments**  (combinations study/latitude/longitude/altitude/species/stages) <br/>
+Red or blue pigmentation of copepod was reported in **154 locations globally** for 316 observations. However, if we remove the 30 studies that reported or analysed pigmentation without a quantitative approach, we obtain **286 measurements of pigments**  (combinations study/latitude/longitude/altitude/species/stages) at 128 locations <br/>
 </div>
 
 <br/>
@@ -155,14 +166,16 @@ Carotenoids quantifications were reported in **134 locations globally**, which c
 ### *Units*
 
 ```{r}
-SI  %>% filter(is.na(concentration) == FALSE) %>% group_by(unit) %>% summarise(nb_of_studies_using_this_unit = n()) %>% arrange(-nb_of_studies_using_this_unit) %>% ungroup()
+SI %>% group_by(unit, unit_conversion) %>% summarise(nb_of_studies_using_this_unit = n()) %>% arrange(-nb_of_studies_using_this_unit) %>% ungroup() 
+#%>% write_xlsx("Summary_units.xlsx")
+
 ```
 
 <style>
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
-Among the **262 quantifications**, the most common unit was **µg/mgDW**: 202 measurements, so only values in µg/mgDW will be kept for quantitative comparisons.
+Among the **286 quantifications the most common unit was µg/mgDW (202 measurements)**. 11 NA are present because for 5 studies, carotenoids were quantified to distinguish proportions of various pigments forms but no value of total carotenoid content was provided. 9 measurements have been successfully converted into µg/mgDW. We were not able to convert the other 64 values because of the method used (ex: mixed species or development stages, missing information, new methods not comparable). All details of conversions are given in Appendix 1: Table S1. Finally, **214 values in µg/mgDW** will be used for all following quantitative comparisons.
 </div>
 <br/>
 
@@ -176,7 +189,7 @@ ug <- SI %>% filter (unit == "ug/mgDW")
 ug$concentration <- as.numeric(ug$concentration)
 
 # Count number of studies by ecosystems 
-ug %>% group_by(ecosystem) %>% summarise(counts = n(), mean_concentration = mean(concentration), sd = sd(concentration)) %>% ungroup()
+ug %>% group_by(ecosystem) %>% summarise(counts = n(), `median concentration` = median(concentration)) %>% ungroup()
 ```
 
 
@@ -199,16 +212,17 @@ pigment_dd <- ug %>%
   theme(legend.position = "none", panel.grid.minor = element_blank())+
   scale_fill_manual(values=c("#7fc97f","#0868ac"))+
   scale_color_manual(values=c("#7fc97f","#0868ac"))+
-  geom_vline(xintercept = mean(filter(ug, ecosystem == "marine")$concentration), linetype="dotted", 
+  geom_vline(xintercept = median(filter(ug, ecosystem == "marine")$concentration), linetype="dotted", 
                 color = "#0868ac", size=1)+
-  geom_vline(xintercept = mean(filter(ug, ecosystem == "freshwater")$concentration), linetype="dotted", 
+  geom_vline(xintercept = median(filter(ug, ecosystem == "freshwater")$concentration), linetype="dotted", 
                 color = "#7fc97f", size=1)
 
 
 # World map with locations of pigmented copepod observations: 
 
 # Create a dataframe with locations of all studies (not only quantifications because observation is enough)
-locations <- SI %>% distinct(study, year, no, latitude, longitude, ecosystem) %>% ungroup()
+locations <- SI_obs_and_quanti %>% distinct(study, year, no, latitude, longitude, ecosystem, blue_color) %>% ungroup()
+
 
 # Project the studies locations 
 loc_proj <- st_as_sf(filter(locations, is.na(latitude) == FALSE), coords = c("longitude", "latitude"), 
@@ -220,16 +234,19 @@ world <- ne_countries(scale = "medium", returnclass = "sf")
 # Plot the map 
 world_map <- ggplot(data = world) +
   geom_sf(size=0.05)+ #plot the world map 
-  geom_sf(data = loc_proj, size = 3, alpha = 0.85, aes(color = ecosystem, shape = ecosystem))+ #project data points
+  geom_sf(data = loc_proj, size = 2, alpha = 0.85, aes(color = ecosystem, shape= ecosystem))+ #project data points
+  #geom_sf(data = filter(loc_proj, blue_color == "yes"), size = 0.8, alpha = 1, color= "#66FFFF")+ #project data points
+  #geom_sf(data = filter(loc_proj, blue_color == "no"), size = 0.5, alpha = 1, color= "#CC0000")+ #project data points
   coord_sf(crs = "+proj=laea +lat_0=42 +lon_0=10 +x_0=4321000 +y_0=3210000 +ellps=GRS80 +units=m +no_defs ")+ #spherical projection
-  labs(color="Ecosystem", shape = "Ecosystem")+
+  labs(color= "Ecosystem", shape = "Ecosystem")+
   scale_color_manual(values=c( "#7fc97f", "#0868ac"))+
-  theme_minimal(base_size=20)
+  theme_minimal(base_size=20)+
+  theme(legend.position = c(1.72, 0.8))
 
 ggdraw(pigment_dd) +  draw_plot(world_map, width =0.75, height =0.75, 
-        x = -0.018, y = 0.25)
+        x = -0.04, y = 0.24)
 
-#ggsave("map_and_density.pdf", width=16, height =10)
+#ggsave("map_and_density.pdf", width=18, height =11)
 
 ```
 
@@ -238,7 +255,7 @@ div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
 
-Freshwater species have an average carotenoid concentration of **2.77 ± 2.71 µg.mgDW-1 (n=62)** and marine species an average carotenoid concentration of **0.44 ± 1.06 µg.mgDW-1 (n=140)**. 
+The inset map shows the 154 locations where carotenoid-based pigmentation have been observerd (blue or red). Disctributions of carotenoids contents were done with the 214 values expressed in µg.mgDW-1. Fweeshwater copepods have an median carotenoid concentration of **2.243 µg.mgDW-1 (n=66)** and marine species a median carotenoid concentration of **0.137µg.mgDW-1 (n=145)**. 
 </div>
 
 <br/>
@@ -251,9 +268,9 @@ ug$ecosystem = factor(ug$ecosystem, levels = c("freshwater", "marine"))
 
 # First, test of normal distribution of data 
 shapiro.test(filter(ug, ecosystem =="freshwater")$concentration)
-# -> W = 0.73354, p-value = 2.782e-09
+# -> W = 0.76516, p-value = 6.513e-09
 shapiro.test(filter(ug, ecosystem =="marine")$concentration)
-# -> W = 0.39528, p-value < 2.2e-16
+# -> W = 0.39191, p-value < 2.2e-16
 
 ```
 -> concentrations are not normally distributed
@@ -263,35 +280,18 @@ ug$concentration_log10 <- log10(ug$concentration)
 # -> log transformation
 
 shapiro.test(filter(ug, ecosystem =="freshwater")$concentration_log10)
-# -> W = 0.98474, p-value = 0.6355 : normal distribution for freshwater data
+# -> W = 0.98421, p-value = 0.5655 : normal distribution
 shapiro.test(filter(ug, ecosystem =="marine")$concentration_log10)
 # -> W = 0.9587, p-value = 0.0003215
 # -> log-transformed marine concentrations are still not normal after transformation
 
 leveneTest( log10(concentration) ~ ecosystem, data = ug, alternative = "two.sided" )
-# -> and variances are not equal :
-#        Df F value    Pr(>F)    
-# group   1  15.819 9.739e-05 ***
+# Df F value   Pr(>F)   
+#1  16.172 8.079e-05 ***
 
 ```
--> log-transformed marine concentrations were **still not normal, and variances are not equal** 
+-> log-transformed marine concentrations were **still not normal, and variances are not equal**, so we will use a non-parametric test
 
-
-```{r echo=T, results='hide'}
-# Try to remove data from Fisher, suspected to be outliers ---
-noFisher <- ug %>% filter(study != "Fisher et al.")
-noFisher$concentration_log10 <- log10(noFisher$concentration)
-shapiro.test(filter(noFisher, ecosystem =="freshwater")$concentration_log10)
-# -> W = 0.98474, p-value = 0.6355 : normal distribution
-shapiro.test(filter(noFisher, ecosystem =="marine")$concentration_log10)
-# W = 0.98338, p-value = 0.6206 : normal distribution
-leveneTest( log10(concentration) ~ ecosystem, data = noFisher, alternative = "two.sided" )
-# -> but variances still not equal, Welch transformation needed
-t.test(log10(concentration) ~ ecosystem, data = noFisher, alternative = "two.sided")
-# -> t.test : freshwater and marine concentration are significantly different
-```
-
--> we tried to **remove data from Fisher et al.**, suspected to be outliers. Distributions were then normal and freshwater and marine carotenoid concentrations **significantly different**. However, **we decided to keep all the complete dataset** with data from Fisher et al. (83 points more, many different species) and **use a non-parametric test:**
 
 ```{r}
 # So we can use a non-parametric test: 
@@ -341,15 +341,15 @@ Plenty of copepod genus have the availability to synthesize astaxanthin but thei
 # Number of studies that quantified the different types of carotenoids in copepods
 detailed_carotenoids <- SI %>% filter(!is.na(astaxanthin_on_total_car)) 
 detailed_carotenoids %>% group_by(study, year, no) %>% summarise(obs = n()) %>% nrow()
-# -> 30 studies 
+# -> 32 studies 
 
 asta_car <- SI %>% group_by(astaxanthin_on_total_car) %>% summarise(counts = n())
-sum(asta_car$counts) # on a total of 291 observations
+sum(asta_car$counts) # on a total of 286 observations
 asta_car <- asta_car %>% filter(!is.na(astaxanthin_on_total_car)) # remove NA
 sum(asta_car$counts) 
-# -> 166 observations with detailed information about carotenoids and 125 observations without detailed information about carotenoids
+# -> 170 observations with detailed information about carotenoids and 116 observations without detailed information about carotenoids
 
-# For these 30 studies and over 166 quantification, distinguishing  observations of astaxanthin in minority (<50%) or majority(>50%)
+# For these 32 studies and over 170 quantification, distinguishing  observations of astaxanthin in minority (<50%) or majority(>50%)
   # Characters strings : 
 min1 <- filter(asta_car, astaxanthin_on_total_car == "minority")
 dom1 <- filter(asta_car, astaxanthin_on_total_car == "dominance")
@@ -363,25 +363,25 @@ min2 <- asta_car %>% filter(astaxanthin_on_total_car < 50)
   # Bind into dataframes in order to count
 dom <- rbind(dom1, dom2)
 min <- rbind(min1, min2)
-sum(dom$counts) / 166 *100
-sum(min$counts) / 166 *100
-# -> in 96%, astaxanthin was dominant (and really often largly dominant : >90% of copepod carotenoids) - 160 quantification 
-# -> in ~4%, astaxanthin was in a minority or <60% of carotenoids - 6 quantifications 
+sum(dom$counts) / 170 *100
+sum(min$counts) / 170 *100
+# -> in 96%, astaxanthin was dominant (and really often largly dominant : >90% of copepod carotenoids) - 164 quantification 
+# -> in ~4%, astaxanthin was in a minority or <50% of carotenoids - 6 quantifications 
 
 # Canthaxanthin : 
 asta_cantha <- SI %>% filter(str_detect(comments, "canthaxanthin")) %>% select(study, year, no, comments) # if authors mentioned canthaxanthin in one observation, we always reported it in the column "comments" of the dataset
 setdiff(asta_cantha$study, detailed_carotenoids$study) # coherently, all studies that mentioned canthaxantin (9) are studies that have detailed all the carotenoids of copepods (30)
 nrow(asta_cantha %>% group_by(study, year, no) %>% summarise(n()))
 nrow(asta_cantha)
-nrow(asta_cantha) / 166 *100
-# -> canthaxanthin was found in only 9 studies (21 observations, 13% of cases), and almost everytime in "negligible amounts, traces or <5%"
+nrow(asta_cantha) / 170 *100
+# -> canthaxanthin was found in only 9 studies (20 observations, 12% of cases), and almost everytime in "negligible amounts, traces or <5%"
 ```
 
 <style>
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
-**Thirty studies** provide a detailed description of carotenoid pigments molecular forms for various species and developmental stages (166 measurements). In **96% (160 quantifications), astaxanthin was dominant** (or >50%), in ~5% (6 quantifications) of the cases, astaxanthin was in a minority or <50% of carotenoids. **Canthaxanthin was found in only 9 studies** (21 observations, 13% of cases), and almost every time in "negligible amounts, traces or <5%". 
+**Thirty-two studies** provide a detailed description of carotenoid pigments molecular forms for various species and developmental stages (170 measurements). In **96% (164 quantifications), astaxanthin was dominant** (or >50%), in ~4% (6 quantifications) of the cases, astaxanthin was in a minority or <50% of carotenoids. **Canthaxanthin was found in only 9 studies** (20 observations, 12% of cases), and almost every time in "negligible amounts, traces or <5%". 
 </div>
 <br/>
 
@@ -442,6 +442,34 @@ This graphic illustrates that we don't have enough study that quantified caroten
 ```{r echo=FALSE, fig.height=3, fig.width= 5, fig.align="center", fig.cap=c("Carotenoid concentrations in copepod stages from three different studies. Points are colored according to the unit used.")}
 SI %>% filter((study == "Hairston" & no == "b")| study == "Holeton et al." | study == "Lotocka et al.") %>% mutate(Stage = factor(stage,levels = c("eggs", "nauplii", "copepodits", "adults", "adults_females"))) %>% ggplot() + geom_point(aes(Stage, concentration, color = unit, shape = study), size=3)+ labs(y="Carotenoid concentrations (units in color)", x="Development stage")+ theme_bw(base_size = 10)
 ```
+<br/>
+<br/>
+
+### *Blue color*
+```{r echo=FALSE, fig.height=3, fig.width= 5, fig.align="center", fig.cap=c("Latitudinal distribution of blue copepod observations")}
+blue_cops <- SI_obs_and_quanti %>% filter(blue_color == "yes")
+# ->  27 observations of blue copepods 
+
+blue_cops %>% group_by(genus) %>% summarise(nb_obs = n()) %>%  arrange(-nb_obs)
+# -> Labidocera and Pontella genus
+
+# Latitudinal distribution
+blue_cops %>% 
+  filter(ecosystem=="marine") %>% 
+  ggplot()+ 
+  geom_density(aes(latitude))
+```
+<br/>
+<br/>
+
+<style>
+div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
+</style>
+<div class = "blue">
+**27 observations of blue copepods**, all in marine ecosystems except for 1 freshwater case. Blue copepods mostly belong to Labidocera and Pontella genus. Most observations were made around 25°N, and none beyond 50°N. 
+
+</div>
+<br/>
 
 
 # II. Effects of abiotic and biotic forcings on astaxanthin concentrations in copepods
@@ -462,7 +490,7 @@ ug  %>% filter(ecosystem=="freshwater") %>% ggplot() +
   geom_point(aes(altitude, log10(concentration)), color="grey40") + 
   geom_smooth(aes(altitude, log10(concentration)), method = "lm", color="black")+
   labs(x="Lake altitude asl. (m)", y=" Carotenoid content (µg/mgDW) 
-- log10 transformation")+
+  Log-transformed values")+
   theme_bw(base_size = 10)
 
 ggsave(filename="fig_sup/Fig.S2.png", width=6, height=4)
@@ -482,7 +510,7 @@ plot(model)
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
-There is a **significant relationship between carotenoids content and altitude of lakes, p-value < 0.001**. However, we see a lot of noise (R square = 0.16) that could be explain by variations of other abiotic variables (temperature, lake depth, water turbidity) and biotic variables (phytoplanktonic community, predators, disponibility of other UV protectants).
+There is a **significant relationship between carotenoids content and altitude of lakes, p-value < 0.001**. However, we see a lot of noise (R square = 0.10) that could be explain by variations of other abiotic variables (temperature, lake depth, water turbidity) and biotic variables (phytoplanktonic community, predators, disponibility of other UV protectants). Extreme high value, but no reason to remove it, as it comes from a very shallow pond in high altitude. 
 </div>
 <br/>
 
@@ -502,7 +530,7 @@ ug  %>%
   scale_color_manual(values=c("#7fc97f","#0868ac"))+
   theme_bw(base_size = 10)+
   labs(y= "Carotenoid content (µg/mgDW)
-  - log10 transformation ", x="Latitude (°) in absolute value", color = "Ecosystem")
+  Log-transformed values", x="Latitude (°) in absolute value", color = "Ecosystem")
 
 ggsave(filename="fig_sup/Fig.S3.png", width=6, height=3.5)
 
@@ -539,7 +567,7 @@ On **37 time series**, astaxanthin content showed seasonal patterns with **maxim
 ## C. Impacts of intra- and inter-species interactions on pigmentation
 
 ### *Predation in lakes*
-```{r fig.align="center", fig.cap=c("Figure S4. Distribution of carotenoid concentrations (µg/mgDW, log-transformed) from lakes with and without predator presence. Carotenoid concentration difference according to predator presence is alomost significant (Wilcoxon test, p-value = 0.05014)"), fig.height=3.5, fig.width=5.5}
+```{r fig.align="center", fig.cap=c("Figure S4. Distribution of carotenoid concentrations (µg/mgDW, log-transformed) from lakes with and without predator presence. Carotenoid concentration difference according to predator presence is significant (Wilcoxon test, p-value = 0.03597)"), fig.height=3.5, fig.width=5.5}
 ug$predation = ifelse(ug$predator_abundance=="null", "no", "yes")
 
 ug  %>% filter(ecosystem=="freshwater") %>%  group_by(predation) %>% summarise(n())
@@ -551,8 +579,8 @@ ug  %>% filter(ecosystem=="freshwater" & is.na(predation)== FALSE) %>%
   geom_point(aes(predation, concentration, color=altitude)) +
   scale_color_viridis_c()+
   scale_y_continuous(trans='log10')+
-  labs(y="Carotenoid contents (ug/mgDW) 
-- log10 transformation", color = "Altitude (m. asl)", x= "Predation")+
+  labs(y="Carotenoid contents (μg/mgDW) 
+  Log10 axis transformation", color = "Altitude (m. asl)", x= "Fish presence")+
   theme_bw(base_size = 10)
 
 ggsave(filename="fig_sup/Fig.S4.png", width=6, height=4)
@@ -576,14 +604,14 @@ Because n<30 and data not normaly distributed, we use a **non-parametric test** 
 
 ```{r}
 wilcox.test(concentration ~ predation, data = df_fish)
-df_fish %>% group_by(predation) %>% summarise(mean(concentration))
+df_fish %>% group_by(predation) %>% summarise(n(), mean(concentration))
 ```
 
 <style>
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
 <div class = "blue">
-We are **really close to the significance threshold (p-value = 0.05014)** for the Wilcocxon rank sum test to compare pigment content between lakes **with** (mean carotenoid concentration = **2.12 µg/mgDW, n=33**) and **without fish** (mean carotenoid concentration = **3.35 µg/mgDW, n = 22**). Altitude could play a role inside each category : high altitude lakes or ponds without fish can also be shallow and exposed to strong light radiations.
+There is a significant difference in carotenoid content **(p-value = 0.03597)** between lakes **with** (mean carotenoid concentration = **2.06 µg/mgDW, n=34**) and **without fish** (mean carotenoid concentration = **3.35 µg/mgDW, n = 22**). Altitude could play a role inside each category : high altitude lakes or ponds without fish can also be shallow and exposed to strong light radiations.
 </div>
 
 <br/>
@@ -596,7 +624,7 @@ SIII$asta_correlation <- factor(SIII$asta_correlation, levels =c("positive","non
 
 # Replace names to have a more lisible figure 
 SIII$forcing_variable <- SIII$forcing_variable %>% 
-  str_replace_all(c("diet_composition" = "A. Diet quality", "feeding_activity" = "B. Feeding", "diet_quantity" = "C. Diet Quality", "fish_presence" = "D. Predator", "diurnal_variations" = "E. Daily cycle", "UV_radiations" = "F. UV", "natural_light" = "G. Natural light", "UV_fish" = "H. UV + Predator", "latitude_discrete" = "I. Latitude", "individual_depth" = "J. In situ depth", "ice_cover" = "K. Ice cover", "temperature" = "L. Temperature", "lake_elevation" = "M. Lake altitude", "dissolved_organic_carbon" = "N. DOC", "copper"= "O. Copper", "lake_depth" = "P. Lake depth", "egg_ratio"= "Q. Egg ratio", "body_length" = "R. Body length", "lipid_content" = "S. Lipid content", "MAAs" = "T. MAAs", "removal of UV radiations" = "U. UV removal"))
+  str_replace_all(c("diet_composition" = "A. Diet quality", "feeding_activity" = "B. Feeding", "diet_quantity" = "C. Diet Quality", "fish_presence" = "D. Predator", "diurnal_variations" = "E. Daily cycle", "UV_radiations" = "F. UV", "natural_light" = "G. Natural light", "UV_fish" = "H. UV + Predator", "latitude_discrete" = "I. Latitude", "individual_depth" = "J. In situ depth", "ice_cover" = "K. Ice cover", "temperature" = "L. Temperature", "lake_elevation" = "M. Lake altitude", "dissolved_organic_carbon" = "N. DOC", "copper"= "O. Copper", "lake_depth" = "P. Lake depth", "egg_ratio"= "Q. Egg ratio", "body_length" = "R. Body length", "lipid_content" = "S. Lipid content", "MAAs" = "T. MAAs"))
   
   
 # Count the number of times a forcing variables was statistically tested according to carotenoid concentrations through a positive, negative or absent correlation:
@@ -610,7 +638,7 @@ SIII_grouped <- SIII %>%
   ungroup()
   
 SIII_grouped %>% 
-  filter(forcing_variable != "U. UV removal" & forcing_variable != "UV_temp") %>% #because these 2 variables are to difficul to interpret without context 
+  filter(forcing_variable != "removal of UV radiations" & forcing_variable != "UV_temp" & forcing_variable != "dvm") %>% #because these 3 variables are rare and too difficult to interpret without context 
   ggplot() + 
   facet_wrap(~forcing_variable, ncol = 4)+
   geom_bar(aes(x=asta_correlation, y=counts, fill=asta_correlation), stat="identity")+
