--- a/code_and_figures_git.Rmd
+++ b/code_and_figures_git.Rmd
@@ -81,18 +81,10 @@ SI %>% filter(str_detect(study_type, "no_quantification", negate = T)) %>% disti
 # -> 0.74
 ```
 
-<<<<<<< HEAD:code_and_figures.Rmd
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
 
-**95 articles** contain the words 'copepods” and “carotenoid”, “astaxanthin” or “redness”, and have observed blue or red copepods in marine or freshwater ecosystems. Among them, **70 studies (74%) quantified carotenoids** (in various units and methods). 
 
-=======
 <div style="background-color: #bbe1e0">
-**84 articles** contain the words 'copepods” and “carotenoid”, “astaxanthin” or “redness” and among them, **76 (90%) quantified carotenoids** (in various units and methods). 
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
+**95 articles** contain the words 'copepods” and “carotenoid”, “astaxanthin” or “redness”, and have observed blue or red copepods in marine or freshwater ecosystems. Among them, **70 studies (74%) quantified carotenoids** (in various units and methods). 
 </div>
 
 
@@ -116,12 +108,8 @@ SI %>% filter(genus != "mixed") %>%
   labs(y="Genus", x= "Number of reported observations")+theme_linedraw(base_size = 10)
 ```
 
-<<<<<<< HEAD:code_and_figures.Rmd
 
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
+<div style="background-color: #bbe1e0">
 Carotenoids were observed in **171 species among 65 genus** (we removed case where genus are mixed together, noted as "mixed"). We can see that *Diaptomus* and *Calanus* species are the most studied. 
 </div>
 
@@ -135,36 +123,12 @@ SI_obs_and_quanti %>% distinct(study, year, no, latitude, longitude) %>% nrow()
 SI_obs_and_quanti %>% nrow()
 
 ```
-=======
+
+
+
 <div style="background-color: #bbe1e0">
-Carotenoids were observed in **161 species among 63 genus** (we removed case where genus are mixed together, noted as "mixed"). We can see that *Diaptomus* and *Calanus* species are the most studied. 
-<br/>
-In some articles, carotenoid pigmentation was just discussed in the text of the article but not quantified, so we classify the study type as "no_quantification" in the "study_type" column. In other cases, pigmentation was assessed visually for some tests but no numerical quantifications were performed. In those cases we put NAs in the "concentration" column. **For all next analyses, only studies that quantified carotenoids will be used:**
-</div>
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
+Red or blue pigmentation of copepod was reported in **154 locations globally** for 316 observations. However, if we remove the 30 studies that reported or analysed pigmentation without a quantitative approach, we obtain **286 measurements of pigments**  (combinations study/latitude/longitude/altitude/species/stages) at 128 locations. <br/>
 
-
-```{r echo=T, results='hide'}
-# keep only studies with quantifications (no NA in the "concentration" column)
-SI <- SI %>% filter(str_detect(study_type, "no_quantification", negate = T))
-
-SI %>% nrow()
-# -> 286 measurements of pigments
-SI  %>% distinct(study, year, no, latitude, longitude) %>% nrow()
-# -> pigmentation (red or blue) was quantified at 128 locations
-```
-
-
-<<<<<<< HEAD:code_and_figures.Rmd
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
-Red or blue pigmentation of copepod was reported in **154 locations globally** for 316 observations. However, if we remove the 30 studies that reported or analysed pigmentation without a quantitative approach, we obtain **286 measurements of pigments**  (combinations study/latitude/longitude/altitude/species/stages) at 128 locations <br/>
-=======
-<div style="background-color: #bbe1e0">
-Carotenoids quantifications were reported in **134 locations globally**, which correspond to **262 measurements of pigments**  (combinations study/latitude/longitude/altitude/species/stages) <br/>
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
 </div>
 
 <br/>
@@ -177,16 +141,8 @@ SI %>% group_by(unit, unit_conversion) %>% summarise(nb_of_studies_using_this_un
 
 ```
 
-<<<<<<< HEAD:code_and_figures.Rmd
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
-Among the **286 quantifications the most common unit was µg/mgDW (202 measurements)**. 11 NA are present because for 5 studies, carotenoids were quantified to distinguish proportions of various pigments forms but no value of total carotenoid content was provided. 9 measurements have been successfully converted into µg/mgDW. We were not able to convert the other 64 values because of the method used (ex: mixed species or development stages, missing information, new methods not comparable). All details of conversions are given in Appendix 1: Table S1. Finally, **214 values in µg/mgDW** will be used for all following quantitative comparisons.
-=======
 <div style="background-color: #bbe1e0">
-Among the **262 quantifications**, the most common unit was **µg/mgDW**: 202 measurements, so only values in µg/mgDW will be kept for quantitative comparisons.
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
+Among the **286 quantifications the most common unit was µg/mgDW (202 measurements)**. 11 NA are present because for 5 studies, carotenoids were quantified to distinguish proportions of various pigments forms but no value of total carotenoid content was provided. 9 measurements have been successfully converted into µg/mgDW. We were not able to convert the other 64 values because of the method used (ex: mixed species or development stages, missing information, new methods not comparable). All details of conversions are given in Appendix 1: Table S1. Finally, **214 values in µg/mgDW** will be used for all following quantitative comparisons.
 </div>
 <br/>
 
@@ -257,23 +213,14 @@ world_map <- ggplot(data = world) +
 ggdraw(pigment_dd) +  draw_plot(world_map, width =0.75, height =0.75, 
         x = -0.04, y = 0.24)
 
-<<<<<<< HEAD:code_and_figures.Rmd
 #ggsave("map_and_density.pdf", width=18, height =11)
 
 ```
 
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
-
-The inset map shows the 154 locations where carotenoid-based pigmentation have been observerd (blue or red). Disctributions of carotenoids contents were done with the 214 values expressed in µg.mgDW-1. Fweeshwater copepods have an median carotenoid concentration of **2.243 µg.mgDW-1 (n=66)** and marine species a median carotenoid concentration of **0.137µg.mgDW-1 (n=145)**. 
-=======
-```
 
 <div style="background-color: #bbe1e0">
-Freshwater species have an average carotenoid concentration of **2.77 ± 2.71 µg.mgDW-1 (n=62)** and marine species an average carotenoid concentration of **0.44 ± 1.06 µg.mgDW-1 (n=140)**. 
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
+
+The inset map shows the 154 locations where carotenoid-based pigmentation have been observerd (blue or red). Disctributions of carotenoids contents were done with the 214 values expressed in µg.mgDW-1. Fweeshwater copepods have an median carotenoid concentration of **2.243 µg.mgDW-1 (n=66)** and marine species a median carotenoid concentration of **0.137µg.mgDW-1 (n=145)**. 
 </div>
 
 <br/>
@@ -388,16 +335,9 @@ nrow(asta_cantha) / 170 *100
 # -> canthaxanthin was found in only 9 studies (20 observations, 12% of cases), and almost everytime in "negligible amounts, traces or <5%"
 ```
 
-<<<<<<< HEAD:code_and_figures.Rmd
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
-**Thirty-two studies** provide a detailed description of carotenoid pigments molecular forms for various species and developmental stages (170 measurements). In **96% (164 quantifications), astaxanthin was dominant** (or >50%), in ~4% (6 quantifications) of the cases, astaxanthin was in a minority or <50% of carotenoids. **Canthaxanthin was found in only 9 studies** (20 observations, 12% of cases), and almost every time in "negligible amounts, traces or <5%". 
-=======
+
 <div style="background-color: #bbe1e0">
-**Thirty studies** provide a detailed description of carotenoid pigments molecular forms for various species and developmental stages (166 measurements). In **96% (160 quantifications), astaxanthin was dominant** (or >50%), in ~5% (6 quantifications) of the cases, astaxanthin was in a minority or <50% of carotenoids. **Canthaxanthin was found in only 9 studies** (21 observations, 13% of cases), and almost every time in "negligible amounts, traces or <5%". 
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
+**Thirty-two studies** provide a detailed description of carotenoid pigments molecular forms for various species and developmental stages (170 measurements). In **96% (164 quantifications), astaxanthin was dominant** (or >50%), in ~4% (6 quantifications) of the cases, astaxanthin was in a minority or <50% of carotenoids. **Canthaxanthin was found in only 9 studies** (20 observations, 12% of cases), and almost every time in "negligible amounts, traces or <5%". 
 </div>
 
 <br/>
@@ -476,10 +416,7 @@ blue_cops %>%
 <br/>
 <br/>
 
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
+<div style="background-color: #bbe1e0">
 **27 observations of blue copepods**, all in marine ecosystems except for 1 freshwater case. Blue copepods mostly belong to Labidocera and Pontella genus. Most observations were made around 25°N, and none beyond 50°N. 
 
 </div>
@@ -518,16 +455,9 @@ plot(model)
 
 ```
 
-<<<<<<< HEAD:code_and_figures.Rmd
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
-There is a **significant relationship between carotenoids content and altitude of lakes, p-value < 0.001**. However, we see a lot of noise (R square = 0.10) that could be explain by variations of other abiotic variables (temperature, lake depth, water turbidity) and biotic variables (phytoplanktonic community, predators, disponibility of other UV protectants). Extreme high value, but no reason to remove it, as it comes from a very shallow pond in high altitude. 
-=======
+
 <div style="background-color: #bbe1e0">
-There is a **significant relationship between carotenoids content and altitude of lakes, p-value < 0.001**. However, we see a lot of noise (R square = 0.16) that could be explain by variations of other abiotic variables (temperature, lake depth, water turbidity) and biotic variables (phytoplanktonic community, predators, disponibility of other UV protectants).
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
+There is a **significant relationship between carotenoids content and altitude of lakes, p-value < 0.001**. However, we see a lot of noise (R square = 0.10) that could be explain by variations of other abiotic variables (temperature, lake depth, water turbidity) and biotic variables (phytoplanktonic community, predators, disponibility of other UV protectants). Extreme high value, but no reason to remove it, as it comes from a very shallow pond in high altitude.
 </div>
 <br/>
 
@@ -614,31 +544,13 @@ wilcox.test(concentration ~ predation, data = df_fish)
 df_fish %>% group_by(predation) %>% summarise(n(), mean(concentration))
 ```
 
-<<<<<<< HEAD:code_and_figures.Rmd
-<style>
-div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
-</style>
-<div class = "blue">
+
+<div style="background-color: #bbe1e0">
 There is a significant difference in carotenoid content **(p-value = 0.03597)** between lakes **with** (mean carotenoid concentration = **2.06 µg/mgDW, n=34**) and **without fish** (mean carotenoid concentration = **3.35 µg/mgDW, n = 22**). Altitude could play a role inside each category : high altitude lakes or ponds without fish can also be shallow and exposed to strong light radiations.
-=======
-<div style="background-color: #bbe1e0">
-We are **really close to the significance threshold (p-value = 0.05014)** for the Wilcocxon rank sum test to compare pigment content between lakes **with** (mean carotenoid concentration = **2.12 µg/mgDW, n=33**) and **without fish** (mean carotenoid concentration = **3.35 µg/mgDW, n = 22**). Altitude could play a role inside each category : high altitude lakes or ponds without fish can also be shallow and exposed to strong light radiations.
 </div>
 
 <br/>
 
-
-```{r}
-wilcox.test(concentration ~ predation, data = df_fish)
-df_fish %>% group_by(predation) %>% summarise(mean(concentration))
-```
-
-<div style="background-color: #bbe1e0">
-We are **really close to the significance threshold (p-value = 0.05014)** for the Wilcocxon rank sum test to compare pigment content between lakes **with** (mean carotenoid concentration = **2.12 µg/mgDW, n=33**) and **without fish** (mean carotenoid concentration = **3.35 µg/mgDW, n = 22**). Altitude could play a role inside each category : high altitude lakes or ponds without fish can also be shallow and exposed to strong light radiations.
->>>>>>> 8baf57a74fd0baee82776a91ec0b679112b0eb5d:code_and_figures_git.Rmd
-</div>
-
-<br/>
 
 ### *Summary of all abiotic and biotic drivers*
 
